testsuite/tests/typecheck/should_fail/T15801.stderr
T15801.hs:52:10: error: [GHC-05617]
    • Could not solve: ‘forall (op_a :: Op (*)) (b :: Op (*)).
                        op_a -#- b’
        arising from the superclasses of an instance declaration
    • In the instance declaration for ‘OpRíki (Op (*))’

